--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,6 +28,18 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.appdevloop.savenoteapp.MainActivity"/>
         </activity>
+
+        <!-- FileProvider - Expose File -->
+        <provider
+            android:name="android.support.v4.content.FileProvider"
+            android:authorities="com.appdevloop.savenoteapp.fileprovider"
+            android:exported="false"
+            android:grantUriPermissions="true">
+            <meta-data
+                android:name="android.support.FILE_PROVIDER_PATHS"
+                android:resource="@xml/provider_paths" />
+        </provider>
+
     </application>
 
 </manifest>
